force-app/main/default/objects/Task_Generation_Rule__mdt/Task_Generation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Configurable rules for automated task creation based on record criteria.</description>
    <label>Task Generation Rule</label>
    <pluralLabel>Task Generations Rule</pluralLabel>
</CustomObject>