force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if rule is active. Only active rules are processed.</description>
    <inlineHelpText>Check to enable this rule. Uncheck to temporarily disable without deleting the configuration. Only active rules are processed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>