force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The Task Category value to populate on generated tasks.Combination of Category and Sub-Category Used for duplicate Task creation prevention.</description>
    <inlineHelpText>Enter the Task Category.Combination of Category and Sub-Category Used for duplicate Task creation prevention.</inlineHelpText>
    <label>Task Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>