force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Condition_Formula__c.field-meta.xml
<CustomField>
    <fullName>Condition_Formula__c</fullName>
    <description>FormulaEval expression defining when a task should be created.</description>
    <inlineHelpText>Enter a Salesforce formula expression (e.g., AND(ISPICKVAL(Status,&apos;New&apos;), Rating__c &gt; 3)). Use standard formula functions like AND, OR, ISPICKVAL, ISBLANK. The formula evaluates against the triggering record.</inlineHelpText>
    <label>Condition Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>