force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Offset__c</fullName>
    <description>Number of days from today to set as task due date.</description>
    <inlineHelpText>Enter number of days to add to today&apos;s date for task due date. Use 0 for today, 1 for tomorrow, etc. Negative values create past due dates.</inlineHelpText>
    <label>Due Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>