force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API name of the Salesforce object for which this rule applies.</description>
    <inlineHelpText>Enter the API name of the object (e.g., Lead, Account, Contact).</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>