force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <description>Name of the Queue, User, or Role to assign as task owner.</description>
    <inlineHelpText>Enter the exact DeveloperName of a Queue (e.g., Partial Match Queue), User (FirstName LastName). System searches in order: Queue → User.</inlineHelpText>
    <label>Owner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>