force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>The Sub-category value to populate on generated tasks. Combination of Category and Sub-Category Used for duplicate Task creation  prevention.</description>
    <inlineHelpText>Enter the Task Sub-category. Combination of Category and Sub-Category Used for duplicate Task creation prevention.</inlineHelpText>
    <label>Task Sub-Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>