force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Stores the Task Subject text.</description>
    <inlineHelpText>Enter the Task Subject text.</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>