force-app/main/default/objects/Task_Generation_Rule__mdt/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <description>Specifies which trigger event should evaluate this rule. Used to filter rules and reduce evaluation overhead.</description>
    <inlineHelpText>Select &apos;INSERT&apos; for rules that should only fire on record insert, &apos;UPDATE&apos; for rules that fire on record update. Leave blank to fire on both events. Filtering reduces the number of rules evaluated for better performance.</inlineHelpText>
    <label>Trigger Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSERT</fullName>
                <default>true</default>
                <label>INSERT</label>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
                <isActive>false</isActive>
                <label>Create</label>
            </value>
            <value>
                <fullName>Status Change</fullName>
                <isActive>false</isActive>
                <label>Status Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>