force-app/main/default/objects/Task_Generation_Rule__mdt/listViews/All_Rules.listView-meta.xml
<ListView>
    <fullName>All_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Active__c</columns>
    <columns>Owner_Type__c</columns>
    <columns>Condition_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
</ListView>